feat: add cursor pagination to upcoming launches